<?xml version="1.0"?>
<package>
  <name>vocabulary_tree</name>
  <version>1.2014.0</version>
  <description>A generic implementation of the vocabulary tree image retrieval approach of Nister and Stewenius. Can be used with any feature and distance metric.</description>
  <maintainer email="siegfried.gevatter@pal-robotics.com">Siegfried Gevatter</maintainer>
  <author>Patrick Mihelich</author>
  <license>BSD</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>eigen</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lvocabulary_tree" />
  </export>

</package>


